<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ADay</string>
    <string name="hello_world">分类</string>
    <string name="action_settings">Settings</string>
    <string name="enter_the_account_number">输入账号</string>
    <string name="enter_password">输入密码</string>
    <string name="enter_password_two">再次输入密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="quick_login">快捷登录</string>
    <string name="book">读物</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="over">完成注册，表示你已阅读并同意</string>
    <string name="clause">Aday用户协议</string>
    <string name="confirm">确定</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_comments">我的评论</string>
    <string name="i_want_to_contribute">我要投稿</string>
    <string name="more_applications">更多应用</string>
    <string name="user_agreement">用户协议</string>
    <string name="feedback">意见反馈</string>
    <string name="the_copyright_to_report">版权举报</string>
    <string name="video_function">视频功能申明</string>
    <string name="to_score">前往App store评分</string>
    <string name="set">设置</string>
    <string name="story">故事</string>
    <string name="lyric">歌词</string>
    <string name="details">详情</string>
    <string name="login_out">退出登录</string>
    <string name="video_story">故事介绍</string>
    <string name="like">喜欢</string>
    <string name="newcomment">最新评论</string>
    <string name="show_more_comment">查看更多评论.......</string>
    <string name="experience_immediately">立即体验</string>
    <string name="look_at_the">L O O K\nA T\nT H E\nW O R L D</string>
    <string name="hear_all">H E A R\nA L L\nT H E\nP O S S I B L E</string>
    <string name="to_enjoy">T O\nE N J O Y\nT H E\nW O R L D</string>
    <string name="liked">点赞</string>
    <string name="play_time">00:00:00</string>

</resources>