<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mine_backgroud_image"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- 设置图标 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/menu_image_set_icon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@drawable/set_icon"
                android:padding="18dp"
                android:src="@drawable/set_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="vertical" >

            <!-- 头像 -->

            <com.can.aday.view.MyImageView
                android:id="@+id/menu_image_head"
                android:layout_width="69dp"
                android:layout_height="69dp"
                android:src="@drawable/mine_header_icon" />

            <!-- 昵称 -->

            <TextView
                android:id="@+id/menu_text_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <!-- 我的收藏 -->

            <TextView
                android:id="@+id/menu_text_my_collection"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/my_collection"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/gray_line_background" />

            <!-- 我的评论 -->

            <TextView
                android:id="@+id/menu_text_my_comments"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/my_comments"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/gray_line_background" />
            <!-- 我要投稿 -->

            <TextView
                android:id="@+id/menu_text_contribute"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/i_want_to_contribute"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/gray_line_background" />
            <!-- 更多应用 -->

            <TextView
                android:id="@+id/menu_text_more_application"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/more_applications"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/gray_line_background" />
        <!-- 底部上啦按钮 -->

        <ImageView
            android:id="@+id/menu_image_pack_up"
            android:layout_width="68dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@drawable/pack_up_icon"
            android:padding="23dp"
            android:src="@drawable/pack_up_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_set"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <!-- 标题栏 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/menu_title_bar_back_icon"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_centerVertical="true"
                android:contentDescription="@drawable/backtrack_icon"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="26dp"
                android:paddingTop="16dp"
                android:src="@drawable/backtrack_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/set"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <!-- 用户协议 -->

            <TextView
                android:id="@+id/menu_text_user_apreement"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_agreement"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/gray_line_background" />

            <!-- 意见反馈 -->

            <TextView
                android:id="@+id/menu_text_feedback"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/feedback"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/gray_line_background" />

            <!-- 版权举报 -->

            <TextView
                android:id="@+id/menu_text_copyright"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/the_copyright_to_report"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/gray_line_background" />

            <!-- 视频功能声明 -->

            <TextView
                android:id="@+id/menu_text_video_function"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/video_function"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/gray_line_background" />

            <!-- 前往App store评分 -->

            <TextView
                android:id="@+id/menu_text_to_score"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/to_score"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:typeface="serif" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/gray_line_background" />

            <!-- 退出登录 -->

            <TextView
                android:id="@+id/menu_text_login_out"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_out"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:typeface="serif" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/gray_line_background" />

        <ImageView
            android:id="@+id/menu_set_image_pack_up"
            android:layout_width="68dp"
            android:layout_height="58dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@drawable/pack_up_icon"
            android:padding="23dp"
            android:src="@drawable/pack_up_icon" />
    </LinearLayout>

</RelativeLayout>