<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.can.aday.MainActivity" >

    <include
        android:id="@+id/include1"
        layout="@layout/main_title_layout" />

    <RadioGroup
        android:id="@+id/main_bottom_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_group_backgroud"
        android:orientation="horizontal"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="3dp" >

        <RadioButton
            android:id="@+id/book_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="1.5dp"
            android:drawableTop="@drawable/bottom_book_btn_selector"
            android:gravity="center_horizontal"
            android:padding="7dp"
            android:text="@string/book"
            android:textColor="@color/bottom_text_not_selet_color"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/music_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="1.5dp"
            android:drawableTop="@drawable/bottom_music_btn_selector"
            android:gravity="center_horizontal"
            android:padding="7dp"
            android:text="@string/music"
            android:textColor="@color/bottom_text_not_selet_color"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/video_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="1.5dp"
            android:drawableTop="@drawable/bottom_video_btn_selector"
            android:gravity="center_horizontal"
            android:padding="7dp"
            android:text="@string/video"
            android:textColor="@color/bottom_text_not_selet_color"
            android:textSize="12sp" />
    </RadioGroup>

</RelativeLayout>