<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_and_register_background"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <!-- 导入头文件 -->

    <include
        android:id="@+id/register_title_bar"
        layout="@layout/title_bar_main" />
    <!-- 头像视图 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="30dp" >

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_white_circular_strokes"
            android:padding="16dp" >

            <com.can.aday.view.MyImageView
                android:id="@+id/register_image_head"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/head_image" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1" >

        <ImageView
            android:id="@+id/register_image_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@drawable/account_icon"
            android:src="@drawable/account_icon" />

        <!-- 账号输入 -->

        <EditText
            android:id="@+id/register_edit_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/register_image_account"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/register_image_account"
            android:layout_toRightOf="@id/register_image_account"
            android:background="@null"
            android:hint="@string/enter_the_account_number"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:textColor="#9F9F9F"
            android:textSize="12sp" />

        <View
            android:id="@+id/register_line_white"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/register_image_account"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:background="@android:color/white" />

        <ImageView
            android:id="@+id/register_image_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_line_white"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp"
            android:layout_marginTop="17dp"
            android:contentDescription="@drawable/password_icon"
            android:src="@drawable/password_icon" />

        <!-- 密码输入 -->

        <EditText
            android:id="@+id/register_edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/register_image_password"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/register_image_password"
            android:layout_toRightOf="@+id/register_image_password"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:textColor="#9F9F9F"
            android:textSize="12sp" />

        <View
            android:id="@+id/register_line2_white"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/register_line_white"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="36dp"
            android:background="@android:color/white" />

        <ImageView
            android:id="@+id/register_image_password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_line2_white"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp"
            android:layout_marginTop="17dp"
            android:contentDescription="@drawable/password_icon"
            android:src="@drawable/password_icon" />

        <!-- 密码输入2 -->

        <EditText
            android:id="@+id/register_edit_password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/register_image_password2"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/register_image_password2"
            android:layout_toRightOf="@+id/register_image_password2"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/enter_password_two"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:textColor="#9F9F9F"
            android:textSize="12sp" />

        <View
            android:id="@+id/register_line3_white"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@id/register_line2_white"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="36dp"
            android:background="@android:color/white" />
        <!-- 确定 -->

        <RelativeLayout
            android:id="@+id/register_relation_confirm"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_below="@id/register_line3_white"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="36dp"
            android:background="#13B5B1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/confirm"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <!-- 服务条款 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/over"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/register_text_clause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clause"
                android:textColor="#13B5B1"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>